--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+    body {background-color:blue;}
+    </style>
+
 <title>Page Title</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <div></div>
+    <button>Guzik</button>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 </body>
 </html>
