--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <style>
-    body {background-color:blue;}
+    body {background-color:blue}
+        #firstDiv {background-color:green}
     </style>
 <script></script>
 
 <title>Page Title</title>
 </head>
 <body>
-    <div></div>
+    <div id="firstDiv">
+        <h1>This is a Heading</h1>
     <button>Guzik</button>
-    <h1>This is a Heading</h1>
+    </div>
     <p>This is a paragraph.</p>
 </body>
 </html>
