--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
     body {background-color:blue}
         #firstDiv {background-color:green}
+#firstTable {cursor: pointer;}
     </style>
 <script></script>
 
@@ -14,6 +15,23 @@
         <h1>This is a Heading</h1>
     <button>Guzik</button>
     </div>
+    <table id="firstTable">
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+        </tr>
+      </table>
     <p>This is a paragraph.</p>
 </body>
 </html>
