--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
         #firstDiv {background-color:green}
 #firstTable {cursor: pointer;}
     </style>
-<script></script>
-
 <title>Page Title</title>
 </head>
 <body>
     <div id="firstDiv">
         <h1>This is a Heading</h1>
-    <button>Guzik</button>
+    <button id="guzik">Guzik</button>
+    <p id="demo"></p>
     </div>
     <table id="firstTable">
         <tr>
@@ -33,5 +32,7 @@
         </tr>
       </table>
     <p>This is a paragraph.</p>
+    <script>
+</script>
 </body>
 </html>
