--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <style>
     body {background-color:blue}
-        #firstDiv {background-color:green}
+        #firstDiv {
+          background-color:red;
+          height: 500px;
+          width: 500px;
+        }
+        #firstDiv:hover {
+          background-color:green;
+        }
 #firstTable {cursor: pointer;}
     </style>
 <title>Page Title</title>
