--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-    body {background-color:blue}
+    body {background-color:white}
         #firstDiv {
           background-color:red;
           height: 500px;
@@ -11,7 +11,10 @@
         #firstDiv:hover {
           background-color:green;
         }
-#firstTable {cursor: pointer;}
+tr:hover{
+  background-color: blue;
+} 
+
     </style>
 <title>Page Title</title>
 </head>
@@ -33,10 +36,25 @@
           <td>50</td>
         </tr>
         <tr>
-          <td>Eve</td>
+          <td>Michael</td>
           <td>Jackson</td>
           <td>94</td>
         </tr>
+        <tr>
+            <td>Eve</td>
+            <td>Kowalski</td>
+            <td>32</td>
+          </tr>
+          <tr>
+              <td>Po</td>
+              <td>Jackson</td>
+              <td>21</td>
+            </tr>
+            <tr>
+                <td>Agent</td>
+                <td>Smith</td>
+                <td>35</td>
+              </tr>
       </table>
     <p>This is a paragraph.</p>
     <script>
