--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@ tr:hover{
       </table>
     <p>This is a paragraph.</p>
     <script>
+            document.getElementById("guzik").addEventListener("click", function(){
+              document.getElementById("demo").innerHTML = "Hello World";
+            });
 </script>
 </body>
 </html>
